tests/testcases/errors/BCE0060-2.boo
"""
BCE0060-2.boo(5,18): BCE0060: 'Foo.Equals(Foo)': no suitable method found to override. Method of same name has been found with incompatible signature(s).
"""
class Foo:
	override def Equals(f as Foo):
		pass

